--- a/emergency-assistant-react/src/components/Homepage/Jumbotron.css
+++ b/emergency-assistant-react/src/components/Homepage/Jumbotron.css
@@ -1,6 +1,8 @@
 .jumbotron {
-    background-color: #007bff;
+    background-color: #1f7eaa;
     color: #fff;
     padding: 2rem;
     margin-bottom: 0;
   }
+
+  
